# looking-beyond-bfs

./: Makefile  README.md
PR-RST/PR-RST_min_max_iter/: CMakeLists.txt  runner.sh  script.sh
PR-RST/PR-RST_min_max_iter/src/: driver.cu
PR-RST/PR-RST_min_max_iter/src/cc/: connected_comp.cpp  connected_comp.h
PR-RST/PR-RST_min_max_iter/src/pr_rst/: grafting.cu  grafting.h  reRoot.cu  reversePaths.cu  rootedSpanningTreePR.cu  rootedSpanningTreePR.h  shortcutting.cu
PR-RST/PR-RST_min_max_iter/src/util/: utility.cu  utility.h
PR-RST/PR-RST_min_max_iter/src/verification/: verifySol.cpp  verifySol.h
PR-RST/PR-RST_v2/: README.md  log_file.txt
PR-RST/PR-RST_v2/src/: Makefile  grafting.cu  grafting.h  main.cu  reRoot.cu  reRoot.h  reversePaths.cu  reversePaths.h  rootedSpanningTreePR.cu  rootedSpanningTreePR.h  runner.sh  shortcutting.cu  shortcutting.h  test_graph.txt  utility.cu  utility.h  verdict.txt  verifySol.cpp  verifySol.h
bfs_adam_polak/: .gitignore  Makefile  main.cu  script.sh
bfs_variants/BFS_Aditya_ver2/: Graph_CSR.cpp  Graph_CSR.h  Makefile  bfs.cu  bfs_validator.sh  custom_lbs.cu  expand.cu  mytimer.h  sample.cu  validate.cpp
bfs_variants/bfs_adam_polak/: Makefile  graph.hpp  main.cu
bfs_variants/cudaBFS/: cudaBFS  cudaBFS.cu  cudaBFSusingPinnedMemory.cu  cudaBFSusingUnifiedMemory  cudaBFSusingUnifiedMemory.cu  cudaBFSusingUnifiedMemoryV1.cu  cudaBFSusingUnifiedMemorymtx
bfs_variants/multicore_bfs/: Makefile  bfs_runner.sh
gconn/: .gitignore  Makefile  euler.cu  main.cu  rst.hxx  script.sh
graph_plots/: fig-1.gp  fig-2.gp
(+9 files in other folders)
